2004/10/20 19:32 (+0200) kaffeetisch

	* GParamSpec.xs, e.t: Add and test support for GParamSpecUnichar.

2004/10/17 12:27 (+0200) kaffeetisch

	* doctypes: Add a description for gunichar.

2004/10/14 15:27 (-0400) muppetman

	* Makefile.PL: use PREREQ_PM in both WriteMakefile calls, so META.yml
	gets created properly.

2004/09/27 09:35 (-0400) muppetman

	* README, NEWS, Glib.pm: stable release 1.061

2004/09/19 23:31 (+0200) kaffeetisch

	* GBoxed.xs: Use gperl_format_variable_for_output when croaking in
	the unwrap function.

	* GType.xs, Glib.xs: Fix two signedness issues.

	* MakeHelper.pm: Print an ellipsis after "Including ApiDoc pod" to
	indicate that it might take some time to comlete.

2004/09/11 15:23 (-0400) muppetman

	* README, NEWS, Glib.pm: stable release 1.060

	* Makefile.PL: remove the "unstable" warning.

2004/08/29 14:19 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.055

2004/08/27 17:44 (-0400) rwmcfa1

	* GenPod.pm: kaffee was seeing include failures which resulted in the 
	carp message comming out, but it was using $_ where it should of been
	$pod which caused a second level of errors which were fatal. 

2004/08/27 13:42 (-0400) rwmcfa1

	* GenPod.pm: preprocess_pod wasn't being called on each pod section
	as it used to be and still should be. couldn't get to sfcvs webui to
	find out when it quit being, but it's been a while.

2004/08/15 17:33 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.054

2004/08/13 22:14 (-0400) muppetman

	* GenPod.pm: fix typo in doc

2004/08/06 21:10 (-0400) rwmcfa1

	* GenPod.pm: get the types from signals prototypes and properties so 
	their enum values will be listed at the bottom of the pod. (this is in
	addition to the xsubs and explicit stuff already in place)

2004/08/01 21:10 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.053

2004/08/01 17:58 (+0200) kaffeetisch

	* MakeHelper.pm: Move select_files_by_version and