@@ -1,13 +1,14 @@
-CVS
+~$
 \.bak$
+blib
 \.bs$
+build
 \.c$
-\.o$
+CVS
+\.cvsignore$
 Makefile$
 Makefile\.old$
-~$
-\.sw.$
-\.cvsignore$
-blib
-build
+\.o$
 \.spec$
+\.sw.$
+\.tar\.gz$
